format details.